# CLEAR

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
clear/: __init__.py  baselines.py  card.py  cli.py  data.py  deep.py  metrics.py  models.py  predictor.py  repro.py  splits.py
docs/: make_overview.py
examples/: quickstart.py
tests/: test_smoke.py
